--- a/HelpTeacherApp/HelpTeacherApp.csproj
+++ b/HelpTeacherApp/HelpTeacherApp.csproj
@@ -52,6 +52,12 @@
     <Compile Include="Alumnos.Designer.cs">
       <DependentUpon>Alumnos.cs</DependentUpon>
     </Compile>
+    <Compile Include="ControlPaseLista.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ControlPaseLista.Designer.cs">
+      <DependentUpon>ControlPaseLista.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -63,6 +69,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>HelpTeacherDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tiempo.cs">
@@ -71,11 +83,18 @@
     <Compile Include="Tiempo.Designer.cs">
       <DependentUpon>Tiempo.cs</DependentUpon>
     </Compile>
+    <Compile Include="UsuarioDAL.cs" />
     <EmbeddedResource Include="Alumnos.resx">
       <DependentUpon>Alumnos.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ControlPaseLista.resx">
+      <DependentUpon>ControlPaseLista.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
