--- a/HelpTeacherApp/App.config
+++ b/HelpTeacherApp/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="HelpTeacherApp.Properties.Settings.HelpTeacherConnectionString"
-            connectionString="Data Source=DESKTOP-3MLN7DR;Initial Catalog=HelpTeacher;Integrated Security=True"
+            connectionString = "Data Source=.;Initial Catalog=HelpTeacher;Integrated Security=True;"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
